[package]
name = "ctp-md"
version = "0.10.0"
authors = ["Wangshan Lu <wisagan@gmail.com>"]
edition = "2018"
links = "ctp-md"

[features]
channel = ["crossbeam-channel"]

[dependencies]
crossbeam-channel = { version = "0.4.0", optional = true }

[dependencies.ctp-common]
version = "0.9.0"
path = "../ctp-common"
